force-app/main/default/objects/Invoice__c/Invoice__c.object-meta.xml
<CustomObject>
    <description
  >A client invoice with a lifecycle from Draft to Paid. Standard and Credit Note record types.</description>
    <label>Invoice</label>
    <nameField>
        <displayFormat>INV-{0000000000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>