force-app/main/default/objects/Invoice__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <description>Sum of invoice line amounts.</description>
    <label>Total Amount</label>
    <summarizedField>InvoiceLine__c.Amount__c</summarizedField>
    <summaryForeignKey>InvoiceLine__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>