force-app/main/default/objects/Invoice__c/recordTypes/Standard.recordType-meta.xml
<RecordType>
    <fullName>Standard</fullName>
    <active>true</active>
    <description>Standard client invoice.</description>
    <label>Standard</label>
</RecordType>